More refactoring to device manager